--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -4,6 +4,7 @@ Galleon
 Version 0.0.0 beta 2:
 ---------------------
 ToGo improvements.
+The server needs to be running for the configuration GUI to work.
 
 
 Version 0.0.0 beta 1:
@@ -37,17 +38,6 @@ How to get started:
 7. Run the Galleon server by using the run.cmd script in the bin directory. 
 Wait until you see a message about the ToGo app being registered.
 8. Use your TiVo to pick ToGo recordings to download to your PC.
-
-
-One note for folks installing JDK 1.5 for the first time - when launching Galleon you may get the following error:
-
-Code:
-
-D:\galleon\bin>run.cmd Error: no `server' JVM at `C:\Program Files\Java\jre1.5.0_01\bin\server\jvm.dll'
-
-The default 1.5 install puts the "server" subfolder under ...Java\jdk1.5.0_01 \bin\server\...
-Just copy the server subfolder that is under the jdk...\bin path and put it under the jre....\bin path. This is the recommended fix from Sun.
-
 
 =====================================================
 galleon.sourceforge.net
