--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -1,13 +1,22 @@
 Galleon
 -------
 
-Delete the previous beta before installing this beta.
-
 Version 0.0.0 beta 9:
 ---------------------
 Fixed safe viewing area option.
-Installation wizard for windows.
-Mac installation packages.
+Windows installation wizard.
+Desktop app.
+Support Mac.
+Improved support for online radio stations.
+Auto restarts for server configuration changes.
+Increased size of text caching.
+Camera app.
+Email app.
+Playlists app.
+Internet images app.
+Random play for music folders.
+New music play bar.
+
 
 Version 0.0.0 beta 8:
 ---------------------
