--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -6,7 +6,6 @@ Version 0.0.0 beta 9:
 Fixed safe viewing area option.
 Windows installation wizard.
 Desktop app.
-Support Mac.
 Improved support for online radio stations.
 Auto restarts for server configuration changes.
 Increased size of text caching.
@@ -16,6 +15,12 @@ Playlists app.
 Internet images app.
 Random play for music folders.
 New music play bar.
+Support HME 1.2.0
+Support Bananas 1.2.1
+View photo option in photo app.
+Rotate photo option in photo app.
+iTunes app.
+Moved artist web images to music player screen.
 
 
 Version 0.0.0 beta 8:
@@ -109,29 +114,34 @@ How to enabled HME on your TiVo DVR:
 
 Known issues:
 1. The server needs to be running for the configuration GUI to work.
-2. Most JavaHMO plugins have not been ported to Galleon yet.
+2. Most JavaHMO plugins have been ported to Galleon.
 3. HME apps are deployed in the Galleon apps directory. 
-4. Galleon requires JDK 1.4
-5. Sections of code have been commented out until all of the JavaHMO code is ported.
-6. Weather errors arent handled properly.
-7. Weather web links need parameters.
-8. App removal does not work.
-10. Weather currently only uses zip.
-11. When you start Galleon, it might take some time before the ToGo list is populated.
-12. Music app only plays one directory of songs at a time.
-13. TiVo sometimes reboots after using the Music app for some time.
-14. Music player generates resource not found errors.
-15. Sorting, shuffling not supported yet.
-16. Playlists not supported yet.
-17. Port 1099 required for GUI to update the server.
-18. Photo viewer automatically goes into slideshow mode; should also just have a play mode.
-19. How to handle Channel Up/Channel Dn overlap between browsing and slideshow music control?
-20. Thumbnail grid can cause "view not found" errors when you move quickly between screens.
-21. Port 7288 required for multicast DNS.
-22. Cannot select songs to play for slideshow using the music organizer.
+4. Galleon requires the 1.4 JRE, but the 1.5 JRE is highly recommended.
+5. Weather errors arent handled properly.
+6. Weather web links need parameters.
+7. App removal does not work.
+8. Weather currently only uses zip.
+9. When you start Galleon, it might take some time before the ToGo list is populated.
+19. Music app only plays one folder of songs at a time.
+11. TiVo sometimes reboots after using the Music app for some time.
+12. Music player generates resource not found errors.
+13. Sorting not supported yet.
+14. Port 1099 required for GUI to update the server.
+15. Thumbnail grid can cause "view not found" errors when you move quickly between screens.
+16. Port 7288 required for multicast DNS.
+17. Only one weather app at a time is supported.
+18. Port 1527 needed for database.
+19. The camera driver sometimes takes 100% of the CPU requiring Galleon to be restarted.
 
 
-How to get started:
+How to install Galleon:
+Run the Windows installation wizard. Except the default settings. After
+the wizard has completed, run the configuration GUI. Use the
+File/Properties menu to configure the Galleon server. Use the File/New
+App to add the applications.
+
+
+How to start Galleon manually from the command line:
 1. Run the Galleon server by using the run.cmd script in the bin directory. Wait until you see a message about the ToGo app being registered. 
 2. Run the Galleon configuration GUI using the gui.cmd script in the bin directory.
 2. Configure the ToGo recordings path and media access key using the File/Properties menu.
@@ -148,7 +158,7 @@ How to get started:
 How to play music with slideshow:
 1. Configure Music app and configure Photos app.
 2. Use your Tivo to browse into a music directory.
-3. Either play some song in that directory, or press the ENTER button.
+3. Press the ENTER button.
 4. Browse into a directory in the Photos app.
 5. When slideshow starts, press Play.
 
@@ -199,6 +209,11 @@ The harder way:
 3. Zip the files (including the new skin.xml file) and rename to *.gln.
 4. Put the skin file in the skins directory.
 5. Use the configuration GUI File/Properties menu to change the selected skin.
+
+
+Cameras:
+The Camera app uses the Java Media Framework:
+http://java.sun.com/products/java-media/jmf/index.jsp
 
 
 =====================================================
