--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -1,6 +1,14 @@
 Galleon
 -------
 
+Version 0.0.0 beta 11:
+----------------------
+Fixed email sorting.
+Removed camera app.
+Fixed memory leak that could cause TiVo reboots.
+Added podcasting app.
+
+
 Version 0.0.0 beta 10:
 ----------------------
 Fixed email app.
