--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -1,13 +1,22 @@
 Galleon
 -------
 
+Version 0.0.0 beta 13:
+----------------------
+Fixed music sorting.
+Fixed .pls playlist streaming support.
+Removed upgrade to JmDNS.
+Fixed playlist play.
+Improved podcasting support for invalid MP3 tags.
+
+
 Version 0.0.0 beta 12:
 ----------------------
-1. Upgraded to JmDNS 1.0 RC2
-2. Fixed some data bugs in various apps.
-3. Updated project web pages.
-4. Fixed album cover image bug.
-5. Support playlists with relative path tracks.
+Upgraded to JmDNS 1.0 RC2
+Fixed some data bugs in various apps.
+Updated project web pages.
+Fixed album cover image bug.
+Support playlists with relative path tracks.
 
 
 Version 0.0.0 beta 11:
