--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -1,15 +1,28 @@
 Galleon
 -------
 
+Version 2.4.0:
+----------------------
+Fixed native installer for existing installations
+*Fixed native logging
+*Limit email downloads
+*Fixed music looping
+*Fixed GoBack sorting
+*GoBack XML backup
+Fixed image file close bug
+Fixed iTunes audio bug
+Added title colors to skinning
+Added menu bars to skinning
+
 
 Version 2.3.0:
 ----------------------
 Native version for Windows
 Resync ToGo video files if moved
 Fixed ToGo stats doubling
-Fix GoBack subfolders
+Fixed GoBack subfolders
 Fixed ToGo sorting by TiVo name in GUI
-Fix movie posters
+Fixed movie posters
 Fixed upcoming dates
 
 
