a few more cleanups for Java 1.5 and line terminations

--- a/galleon/ReleaseNotes.txt
+++ b/galleon/ReleaseNotes.txt
@@ -1,6 +1,12 @@
 Galleon
 -------
 
+Version 2.3.1:
+----------------------
+Upgraded open-source components to mostly current versions
+Use track title instead of file name for "Music" listings
+Published modified Bananas library
+Switched to build with Java 1.5
 
 Version 2.3.0:
 ----------------------
